--- a/web/fetch_data.html
+++ b/web/fetch_data.html
@@ -20,11 +20,11 @@
         // usually JavaScript would be in a SEPARATE file
         my_data = '' // here's a place we can store data
         // fetch the external data
-        // ()=>{} is a modern function
+        // ()=>{} is a function
         const getData = ()=>{ //()=>{} is a function
             // this replaces XMLHttpRequest
-            fetch('http://jsonplaceholder.typicode.com/users/6')
-                .then( response => response.json() ) // convert the data from JSON
+            fetch('http://jsonplaceholder.typicode.com/users/6') // replace with IP adress 
+                .then(response => response) // convert the data from JSON
                 .then(
                     // when the data comes back, put in into the page
                     (d) => {
@@ -39,3 +39,4 @@
     </script>
 </body>
 </html>
+<!--  -->
