--- a/web/fetch_data.html
+++ b/web/fetch_data.html
@@ -23,7 +23,8 @@
         // ()=>{} is a function
         const getData = ()=>{ //()=>{} is a function
             // this replaces XMLHttpRequest
-            fetch('http://jsonplaceholder.typicode.com/users/6') // replace with IP adress 
+            // fetch('http://jsonplaceholder.typicode.com/users/6') // replace with IPadress/movement
+            fetch('http://192.168.0.40/movement')
                 .then(response => response) // convert the data from JSON
                 .then(
                     // when the data comes back, put in into the page
