--- a/web/fetch_data.html
+++ b/web/fetch_data.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- <script src="https://code.highcharts.com/8.0/highcharts.js"></script> -->
     <title>Fetching Remote Data</title>
 </head>
 <body>
@@ -21,7 +22,7 @@
         my_data = '' // here's a place we can store data
         // fetch the external data
         // ()=>{} is a function
-        const getData = ()=>{ //()=>{} is a function
+        const getData = ()=>{ 
             // this replaces XMLHttpRequest
             // fetch('http://jsonplaceholder.typicode.com/users/6') // replace with IPadress/movement
             fetch('http://192.168.0.40/movement')
