--- a/web/fetch_data.html
+++ b/web/fetch_data.html
@@ -4,41 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- <script src="https://code.highcharts.com/8.0/highcharts.js"></script> -->
-    <title>Fetching Remote Data</title>
-</head>
-<body>
-    <article>
-        <header></header>
-        <section>
-            <!-- this is where our data will appear -->
-            <textarea id='monitor'></textarea>
-            <hr/>
-            <button id='btnGo'>Get Data</button>
-        </section>
-        <footer></footer>
-    </article>
-    <script>
-        // usually JavaScript would be in a SEPARATE file
-        my_data = '' // here's a place we can store data
-        // fetch the external data
-        // ()=>{} is a function
-        const getData = ()=>{ 
-            // this replaces XMLHttpRequest
-            // fetch('http://jsonplaceholder.typicode.com/users/6') // replace with IPadress/movement
-            fetch('http://192.168.0.40/movement')
-                .then(response => response) // convert the data from JSON
-                .then(
-                    // when the data comes back, put in into the page
-                    (d) => {
-                        data = d
-                        console.log(data)
-                        monitor.innerHTML = data.name
-                    }
-                    ) // store the data in our 'data' variable
+    <title>Movement data graph</title>
+    <!-- design of the webpage -->
+
+    <!-- <style>
+        body {
+        min-width: 300px;
+        max-width: 800px;
+        height: 400px;
+        margin: 0 auto;
         }
-        // make the button respond to clicks
-        btnGo.addEventListener('click', getData)
-    </script>
-</body>
+        h2 {
+        font-family: Arial;
+        font-size: 2.5rem;
+        text-align: center;
+        }
+    </style> -->
+</head>
+    <body>
+        <article>
+            <header></header>
+            <section>
+                <!-- this is where our data will appear -->
+                <textarea id='monitor'></textarea>
+                <hr/>
+                <button id='btnGo'>Get Data</button>
+            </section>
+            <footer></footer>
+        </article>
+        <script>
+            var chartT = new Highcharts.Chart({
+                chart:{ 
+                    renderTo : 'movement-chart' 
+                },
+                title: { 
+                    text: 'Change in FSR data' 
+                },
+                series: [{
+                    showInLegend: false,
+                    data: []
+                }],
+                plotOptions: {
+                    line: { 
+                        animation: false,
+                        dataLabels: { 
+                            enabled: true 
+                        }
+                    },
+                    series: { color: '#059e8a' }
+                },
+                xAxis: { 
+                    type: 'datetime',
+                    dateTimeLabelFormats: { 
+                        second: '%H:%M:%S' 
+                    }
+                },
+                yAxis: {
+                    title: { 
+                        text: 'Movement (analog units)' 
+                    }
+                },
+                credits: { 
+                    enabled: false 
+                }
+            });
+
+
+            // usually JavaScript would be in a SEPARATE file
+            my_data = '' // here's a place we can store data
+            // fetch the external data
+            // ()=>{} is a function
+            const getData = ()=>{ 
+                // this replaces XMLHttpRequest
+                // fetch('http://jsonplaceholder.typicode.com/users/6') // replace with IPadress/movement
+                fetch('http://192.168.0.40/movement')
+                    .then(response => response) // convert the data from JSON
+                    .then(
+                        // when the data comes back, put in into the page
+                        (d) => {
+                            data = d
+                            console.log(data)
+                            monitor.innerHTML = data.name
+                        }
+                        ) // store the data in our 'data' variable
+            }
+            // make the button respond to clicks
+            btnGo.addEventListener('click', getData)
+
+
+
+
+
+    //         setInterval(function ( ) {
+    //             var xhttp = new XMLHttpRequest();
+    //             xhttp.onreadystatechange = function() {
+    //                 if (this.readyState == 4 && this.status == 200) {
+    //                     var x = (new Date()).getTime(),
+    //                     y = parseFloat(this.responseText);
+    //                     if(chartT.series[0].data.length > 50) {
+    //                         chartT.series[0].addPoint([x, y], true, true, true);
+    //                     } else {
+    //                         chartT.series[0].addPoint([x, y], true, false, true);
+    //                     }
+    //                 }
+    //             }
+    //             xhttp.open("GET", "/movement", true);
+    //             xhttp.send();
+    // }, 
+    // 1000 ) ;
+        </script>
+    </body>
 </html>
 <!--  -->
