--- a/web/fetch_data.html
+++ b/web/fetch_data.html
@@ -92,26 +92,8 @@
             btnGo.addEventListener('click', getData)
 
 
-
-
-
-    //         setInterval(function ( ) {
-    //             var xhttp = new XMLHttpRequest();
-    //             xhttp.onreadystatechange = function() {
-    //                 if (this.readyState == 4 && this.status == 200) {
-    //                     var x = (new Date()).getTime(),
-    //                     y = parseFloat(this.responseText);
-    //                     if(chartT.series[0].data.length > 50) {
-    //                         chartT.series[0].addPoint([x, y], true, true, true);
-    //                     } else {
-    //                         chartT.series[0].addPoint([x, y], true, false, true);
-    //                     }
-    //                 }
-    //             }
-    //             xhttp.open("GET", "/movement", true);
-    //             xhttp.send();
-    // }, 
-    // 1000 ) ;
+    // graph will be made in request_arduinodata.py 
+    // call on the graph and display it every second/minute 
         </script>
     </body>
 </html>
