--- a/web/fetch_data.html
+++ b/web/fetch_data.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <script src="https://code.highcharts.com/8.0/highcharts.js"></script> -->
+    <script src="https://code.highcharts.com/8.0/highcharts.js"></script>
     <title>Movement data graph</title>
     <!-- design of the webpage -->
 
-    <!-- <style>
+    <style>
         body {
         min-width: 300px;
         max-width: 800px;
@@ -19,7 +19,7 @@
         font-size: 2.5rem;
         text-align: center;
         }
-    </style> -->
+    </style>
 </head>
     <body>
         <article>
